--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -7,13 +7,14 @@
 }
 
 .el-menu-item.is-active {
-  color: $mainBg !important;
+  color: #fff !important;
+  background-color: #1A8CE1 !important;
 }
-
-.nest-menu .el-submenu>.el-submenu__title,
-.el-submenu .el-menu-item {
+.el-submenu .el-menu-item:hover{color:#fff!important;background: #1A8CE1 !important;}
+.el-submenu .el-menu-item:hover i{ color: #fff!important;}
+.nest-menu .el-submenu>.el-submenu__title {
   background-color: #021d3a !important;
   &:hover {
-    background: #00142a !important;
+    background: #1A8CE1 !important;
   }
 }
