shuyun-ui  修改图片上传类型判断 字段修改  在苹果电脑上兼容问题及核验显示问题

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -23,3 +23,6 @@
 .el-form-item.is-success .el-input__validateIcon{ display: none;}
 
 .el-loading-spinner .el-loading-text{ text-align: center;}
+
+//
+.select_con .el-checkbox__label{ display: none;}
